--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OthersNameCard.cshtml
@@ -47,7 +47,8 @@
 
                     <p>@Html.DisplayFor(model => model.userWithId.LineOfStudy)</p>
                     <p>@Html.DisplayFor(model => model.userWithId.Email)</p>
-                    <div class="othersPhoto">
+                    
+                    <div class="others-photo">
                         <img src="@Model.userWithId.ProfilePicture" alt="Profile picture">
                     </div>
                 </div>
