--- a/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/NewsfeedGroups.css
@@ -10,7 +10,8 @@
     width: 160px;
 }
 
-.all-posts {
+.all-posts 
+{
     margin-bottom: 5%;
     margin-left: 33%;
     margin-top: 5%;
@@ -22,7 +23,7 @@
     padding-bottom: 2%;
 }
 
-.CommentDisplay 
+.comment-display
 {
     height: 98px;
     margin-top: 1%;
@@ -47,7 +48,8 @@
     margin-top: -3%;
 }
 
-.comment-post-name{
+.comment-post-name
+{
     font-weight: bold;
     margin-left: 2%;
 }
@@ -61,7 +63,8 @@
     width: 92%;
 }
 
-.each-post {
+.each-post 
+{
     border: 1px solid #A8A8A8;
     margin-left: -35%;
     margin-right: 13%;
@@ -107,7 +110,8 @@
     width: 15%;
 }
 
-.input-youtube {
+.input-youtube 
+{
     background-image: url('/Myndir/PostVideo.png');
     background-repeat: no-repeat;
     background-size: 100%;
@@ -121,12 +125,12 @@
 
 .like-img 
 {
-  background-image: url('/Myndir/Like.png'));
+  background-image: url('/Myndir/Like.png');
   background-repeat: no-repeat;
   background-size: 100%;
   border: none;
   cursor: pointer;
-  height: 56px;
+  height: 53px;
   margin-left: 92%;
   margin-top: -5%;
   width: 56px;
@@ -168,7 +172,8 @@
     margin-left: 136px;
 }
 
-.post-content {
+.post-content 
+{
     width: 90%;
     margin-left: 2%;
 }
@@ -186,7 +191,8 @@
     margin-left: 70%;
 }
 
-.post-input {
+.post-input 
+{
     border: none;
     font-size: 16px;
     height: 102px;
@@ -247,8 +253,9 @@
     width: 208px;
 }
 
-.submit-comment {
-    background-image: url('/Myndir/takkar.jpg');
+.submit-comment 
+{
+    background-image: url('/Myndir/ButtonBackground.jpg');
     border-color: #faa61f;
     border-radius: 4px;
     font-weight: bold;
