--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -99,7 +99,7 @@
                         }
                         else
                         {
-                            <p class="post-name">@postingUser.UserName</p>
+                            <p class="post-name">@post.UserName</p>
                         }
                         <p class="post-date">@post.DateCreated</p>
                         <div class="each-post">
@@ -170,7 +170,7 @@
                                                 }
                                                 else
                                                 {
-                                                    <p>@commentingUser.UserName</p>
+                                                    <p>@comment.UserName</p>
                                                 }
                                                 
                                             </div>
