--- a/SozialWebApplication/SozialWebApplication/Views/Shared/_Layout.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Shared/_Layout.cshtml
@@ -9,31 +9,11 @@
 
 </head>
 <body>
-  <!--  <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                "at"Html.ActionLink("Application name", "Index", "Home", null, new { "at"class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>"at"Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>"at"Html.ActionLink("About", "About", "Home")</li>
-                    <li>"at"Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                "at"Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </div>-->
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>@DateTime.Now.Year - SoZial made by Unicorn Corporation</p>
         </footer>
     </div>
     <script src="/Scripts/jquery-1.10.2.min.js"></script>
