--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -44,7 +44,6 @@
                             <input type="submit" value="Create group" name="submit" class="addnewgroup-button" />
                         </div>
                     </div>
-                    <p>@Model.CreateGroupMessage</p>
                 }
 
                 <!-- Searching -->
@@ -58,6 +57,10 @@
                         </div>
                     </div>
                 }
+
+                <div class="group-message">
+                    <p>@Model.CreateGroupMessage</p>
+                </div>
 
             </div>
 
