--- a/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/NewsfeedGroups.cshtml
@@ -91,7 +91,7 @@
                 {
                     var postingUser = UserService.Instance.GetUserByUserName(post.UserName);
                     <div class="whole-each-post">
-                            <img src="@postingUser.ProfilePicture" class="profile-picture-post" alt="@Profile picture">
+                            <img src="@postingUser.ProfilePicture" class="profile-picture-post" alt="Profile picture">
 
                         @if (postingUser.FullName != null)
                         {
@@ -161,7 +161,7 @@
                                     var commentingUser = UserService.Instance.GetUserByUserName(comment.UserName);
                                     <div class="CommentDisplayParent">
                                         <div class="comment-display">
-                                            <img src="@commentingUser.ProfilePicture" class="profile-picture-comment" alt="@Profile picture">
+                                            <img src="@commentingUser.ProfilePicture" class="profile-picture-comment" alt="Profile picture">
                                             
                                             <div class="comment-post-name">
                                                 @if (commentingUser.FullName != null)
