--- a/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/Home/SearchGroups.cshtml
@@ -31,7 +31,6 @@
 
     <div class="overflowceeper">
         <div class="feed-body">
-
             <div class="add-and-search">
 
                 <!-- Create a new group -->
@@ -61,7 +60,6 @@
                 <div class="group-message">
                     <p>@Model.CreateGroupMessage</p>
                 </div>
-
             </div>
 
             <table class="groups-lists">
@@ -81,7 +79,7 @@
                                 </tr>
                             }
                         }
-                 </tbody>
+                </tbody>
             </table>
 
             <table class="groups-lists">
@@ -130,9 +128,10 @@
                         }
                 </tbody>
             </table>
+        </div>
+    </div>
 
-        </div> <!--feed-body-->
-    </div> <!--overflowceeper-->
     <br />
+
 </div>
 
