--- a/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
+++ b/SozialWebApplication/SozialWebApplication/Views/NameCards/OwnNameCard.cshtml
@@ -1,5 +1,5 @@
 ﻿@model SozialWebApplication.Models.ViewModels.NameCardViewModel
-
+<!--Karlotta-->
 <div class="bc">
     @{
         ViewBag.Title = "Sozial";
