--- a/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
+++ b/SozialWebApplication/SozialWebApplication/Content/CSS/namecard.css
@@ -5,11 +5,12 @@
 
 .information 
 {
-    font-weight: bold;
-    margin-left: 476px;
-    padding-top: 6%;
-    position: absolute;
-    text-align: center;
+font-weight: bold;
+  margin-left: 15px;
+  /* padding-top: 6%; */
+  /* position: absolute; */
+  text-align: center;
+  margin-top: -295px;
 }
 
 .information > p 
@@ -131,12 +132,17 @@
     font-size: 25px;
 }
 
+.others-namecard-buttons
+{
+
+}
+
 .others-photo
 {
-    height: 300px;
-    margin-top: -61%;
-    margin-left: -121%;
-    width: 300px;
+height: 300px;
+  /* margin-top: 5%; */
+  margin-left: 80px;
+  width: 300px;
 }
 
 .others-photo img
